# revealed-preference-betting-llms

./: .gitignore  LICENSE  README.md  bets.py  justfile  pyproject.toml
src/: games.py  utils.py
tests/: __init__.py  conftest.py  test_games.py  test_utils.py
