[project]
name = "general-agents-and-world-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "ecos>=2.0.14",
    "ipykernel>=6.29.5",
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.1",
    "numpy>=2.2.6",
    "openai>=1.93.0",
    "outlines>=1.2.3",
    "pandas>=2.3.0",
    "pdbpp>=0.11.7",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "ruff>=0.12.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers[torch]>=4.54.1",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
